# atomsgame

./: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/app/: config.py  game.py  main.py
backend/app/model/: common.py  game.py
backend/tests/: test_game.py
frontend/: .eslintrc.json  Dockerfile.dev  Dockerfile.prod  next.config.js  package-lock.json  package.json
frontend/src/components/: Board.tsx  ErrorAlert.tsx  Game.tsx  Indicator.tsx  Tutorial.tsx
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx  singleplayer.tsx  tutorial.tsx
frontend/src/styles/: globals.css
frontend/src/types/: game.ts
proxy/: Dockerfile  dev.conf  prod.conf
scripts/: dev.sh  prod.sh
