[tool.poetry]
name = "atomsgame"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
orjson = "^3.9.7"
uvicorn = {version = "^0.23.2", extras = ["standard"]}
uvloop = {version = "^0.17.0", markers = "sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
